# python-pixi-cruft

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  conda_build.yml  cruft.yml  pypi_build.yml
{{cookiecutter.project_slug}}/conda-recipe/: meta.yaml
